--- a/data-science.html
+++ b/data-science.html
@@ -97,7 +97,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://iadbcareers.referrals.selectminds.com/jobs/data-scientist-python-and-r-programmer-consultant-1492'>Data Scientist/ Python and R Programmer Consultant - Inter ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://iadbcareers.referrals.selectminds.com/jobs/data-scientist-python-and-r-programmer-consultant-1492'>Data Scientist/ Python and R Programmer Consultant - Inter ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Data Scientist/ Python and R Programmer Consultant Background: The Inter-
 American Development Bank's Knowledge, Innovation and Communication 
@@ -107,7 +107,7 @@ Sector.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bird/978db727-c2e1-4b2b-b908-f862dfb9d72f'>Bird Careers - Manager, Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bird/978db727-c2e1-4b2b-b908-f862dfb9d72f'>Bird Careers - Manager, Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -148,7 +148,7 @@ learning models and performing analytics preferably in risk domain.</p>
 <p>1 day ago ... About Nubank. Nubank is the leading financial technology company in Latin 
 America. Its first product, launched in 2014, is a no-fee credit card that is fully?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/goldenstatewarriors/jobs/1796132'>Job Application for Senior Data Scientist at GSW Sports, LLC</a></h5> 
+<h5><a href='https://boards.greenhouse.io/goldenstatewarriors/jobs/1796132'>Job Application for Senior Data Scientist at GSW Sports, LLC</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... The Golden State Warriors are looking for a savvy and innovative Senior Data 
 Scientist to join our growing Basketball Operations team. In this role, you will 
@@ -162,12 +162,12 @@ have?...</p>
 <p><span class="badge badge-light">Denver San Francisco</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://expedia.wd5.myworkdayjobs.com/search/job/Austin-Domain-11---HomeAway/Senior-Data-Scientist_R-46002'>Senior Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://expedia.wd5.myworkdayjobs.com/search/job/Austin-Domain-11---HomeAway/Senior-Data-Scientist_R-46002'>Senior Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... Expedia. We are looking for a Data Scientists to join our growing 20+ strong team
 . This position focuses on the measurement and optimization of advertising?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://caseware.workable.com/j/A0AF5CD597'>CaseWare - Jobs: Data Scientist x2 - Apply online</a></h5> 
+<h5><a href='https://caseware.workable.com/j/A0AF5CD597'>CaseWare - Jobs: Data Scientist x2 - Apply online</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada Toronto</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -183,7 +183,7 @@ have?...</p>
 <p><span class="badge badge-light">Provo, UT</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/northbridge/job/odhlafwJ'>Northbridge Financial Corporation Careers - Associate Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/northbridge/job/odhlafwJ'>Northbridge Financial Corporation Careers - Associate Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -195,7 +195,7 @@ have?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/rauxa/jobs/4373994002'>Job Application for Director, Data Science at Rauxa</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/rauxa/jobs/4373994002'>Job Application for Director, Data Science at Rauxa</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -207,7 +207,7 @@ have?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BYond/743999692325746-data-scientist-developer-intern'>B.Yond Data Scientist Developer - Intern | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BYond/743999692325746-data-scientist-developer-intern'>B.Yond Data Scientist Developer - Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -302,7 +302,7 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light">Cape Town Cape Town South Africa</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syone2.recruitee.com/o/ref-4742019-data-science-project-manager'>
+<h5><a href='https://syone2.recruitee.com/o/ref-4742019-data-science-project-manager'>
       (Ref. 474/2019) Data Science / Project Manager - Syone
     </a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
@@ -332,7 +332,7 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light">Santa Barbara</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://fractalanalytics.applytojob.com/apply/fqUEsu3dQ7/Data-Scientist-China'>Data Scientist ,China - Fractal Analytics - Career Page</a></h5> 
+<h5><a href='http://fractalanalytics.applytojob.com/apply/fqUEsu3dQ7/Data-Scientist-China'>Data Scientist ,China - Fractal Analytics - Career Page</a></h5> 
 <p><span class="badge badge-light">Shanghai Shanghai, China</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -431,7 +431,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Stockholm Stockholm Stockholm London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/8451/jobs/4368755002'>Job Application for Lead Data Scientist at 84.51? </a></h5> 
+<h5><a href='https://boards.greenhouse.io/8451/jobs/4368755002'>Job Application for Lead Data Scientist at 84.51? </a></h5> 
 <p><span class="badge badge-light">Cincinnati, OH</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -441,7 +441,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 and artificial intelligence advances? In an increasingly connected world, massive
 ?...</p>
 <hr/>
-<h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-MD-Columbia-7200-Riverwood-Dr/Data-Scientist--Senior_R0062237-1'>Data Scientist, Senior</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-MD-Columbia-7200-Riverwood-Dr/Data-Scientist--Senior_R0062237-1'>Data Scientist, Senior</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 12, 2019 ... Are you fascinated by the possibilities presented by the IoT, machine learning, 
 and artificial intelligence advances? In an increasingly connected world, massive
@@ -469,7 +469,7 @@ and artificial intelligence advances? In an increasingly connected world, massiv
 <p><span class="badge badge-light">Columbus, OH, USA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://westernun.referrals.selectminds.com/jobs/junior-data-scientist-19557'>Junior Data Scientist - Western Union Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://westernun.referrals.selectminds.com/jobs/junior-data-scientist-19557'>Junior Data Scientist - Western Union Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Thanks for your interest in the Junior Data Scientist position. Unfortunately this 
 position has been closed but you can search our 172 open jobs by clicking here.</p>
